# cpp-script-editor

./: CMakeLists.txt  README.md
scripts/: example.qs
src/: main.cpp  script_editor.cpp  script_editor.h  udp_file_server.cpp  udp_file_server.h  ui.cpp  ui.h
